--- a/src/index.css
+++ b/src/index.css
@@ -69,4 +69,21 @@ code {
 h1{
   color:#c84d4d;
   font-size:2rem;
+  margin: 20px 20px;
+  font-weight:500;
+}
+img{
+  height:60vh;
+  border: 10px solid #4a898e;
+  margin:auto;
+  margin-bottom:30px;
+  filter: drop-shadow(5px 5px 5px #1c1c1c);
+}
+p{
+  width:90%;
+  text-align:center;
+  margin:auto;
+  margin-bottom:20px;
+  line-height:1.7;
+  font-size:1.1rem;
 }
