--- a/src/index.css
+++ b/src/index.css
@@ -76,13 +76,14 @@ img{
   height:60vh;
   border: 10px solid #4a898e;
   margin:auto;
-  margin-bottom:30px;
+
   filter: drop-shadow(5px 5px 5px #1c1c1c);
 }
 p{
   width:90%;
   text-align:center;
   margin:auto;
+  margin-top:30px;
   margin-bottom:20px;
   line-height:1.7;
   font-size:1.1rem;
